--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@ color:#ffffff;font-size: 11px;
   </div>
   <div style="height: 0px;" id="collapseOne" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     <div class="texto">La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política entre los países de estas dos regiones, así como un mecanismo de cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable de esos países y para contribuir a la paz mundial.<br />
-Esta asociación de naciones se sustenta en raíces comunes -que aún hoy se traslucen en aspectos culturales tales como el lenguaje y la gastronomía- así como en valores fundamentales y en una visión compartida del futuro de la Humanidad.<br />
-Este foro se encuentra conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR.<br />
+     <div class="texto">La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política, cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable y la paz mundial.<br /> 
+El ASPA está conformado conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR<br />
 <a class="btn btn-inverse enlace" href="http://www.aspa3.com" target="_blank">Ver pagina del ASPA</a>
 </div>
     <!-- CONTENIDO -->
@@ -405,36 +404,22 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
   <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
      <p class="texto">
-El Perú es una República democrática, social, independiente y soberana. Su ordenamiento jurídico se rige actualmente por la Constitución Política promulgada el 29 de diciembre de 1993.
-El estado peruano tiene en su estructura tres poderes independientes: Poder Ejecutivo, Poder Legislativo (con un Parlamento Unicameral de 130 miembros) y Poder Judicial. Las autoridades del Poder Ejecutivo y Legislativo son elegidas por sufragio popular. 
-El actual Presidente Constitucional de la República, Ollanta Humala Tasso, asumió el cargo el 28 de julio del 2011 y dirigirá el país hasta el 28 de Julio del 2016. <br /> 
-<strong>Ubicación Geográfica</strong><br /> 
-El Perú se encuentra situado en la parte central y occidental de América del Sur. Tiene una extensión de 1 285 216 km2  ó 496 223 millas. Es el tercer país más extenso de Sudamérica. <br /> 
-<strong>Población</strong><br /> 
-Según el último Censo Nacional de Población del 2007, el Perú tiene 28.2 millones de habitantes aproximadamente. <br />
-<strong>Historia </strong><br />
-El Perú es cuna de grandes culturas que hoy asombran al mundo. En su territorio se construyó la ciudad más antigua de América: Caral, considerada por la UNESCO como Patrimonio Cultural de la Humanidad. Los vestigios de esta compleja civilización preinca, se encuentran en el Valle de Supe, 200 kilómetros al norte de Lima, la capital del país. Con aproximadamente 5.000 años de antigüedad, Caral fue contemporánea con otras civilizaciones como las de China, Egipto, India y Mesopotamia.
-
-Perú también es cuna de otras culturas pre Incas que alcanzaron gran conocimiento y desarrollo en áreas como la agricultura, la ganadería, la textilería y la construcción. Chavín (1000 a.C.), Cupisnique (900 a.C.), Vicus (100 a.C.) y Paracas (400 a.C.), por ejemplo, destacaron mundialmente por la alta calidad de sus textiles, cuyos colores se mantienen intactos hasta hoy. Las culturas Mochica (0-600 d.C), Nazca (0-800 d.C), Tiahuanaco (200-800 d.C), Chimú (900–1440 d.C) dejaron también al mundo muestras de su grandeza en el desarrollo de técnicas para la construcción de sus ciudadelas, edificaciones, acueductos, sistemas de riego y orfebrería sofisticada.
-
-Posteriormente, la Cultura Inca (siglos XIII al XVI), una de las más notables de la historia, ha dejado un importante legado de conocimientos, avanzados para su tiempo, que hoy siguen despertando el asombro de la humanidad.<br /> 
-<strong>Economía y Desarrollo Humano </strong><br /> 
-En el período de julio 2011 a junio de 2012 el Perú ha logrado un crecimiento económico de 6%, superior a la trazada de 5,7%, considerando que el Producto Bruto Interno (PBI) en el 2011 se incrementó en 6.9%. De este modo y, siguiendo la tendencia positiva de la economía, se proyecta que durante los años 2012 y 2013 el crecimiento del PBI sea del orden del 6% anual. <br /> 
-<strong>Productividad</strong><br /> 
-El territorio peruano tiene casi todos los climas del planeta, con notables recursos naturales, mineros y energéticos. En el mundo, el Perú es el  primer exportador de espárragos y páprika, primer productor de harina y aceite de pescado, fibras de alpaca y vicuña, segundo productor de cobre y tercero de plata y tiene el noveno lugar en el ámbito mundial en bosques naturales y el segundo en Sudamérica.
-
-En Latinoamérica es el primer productor de oro, plata, zinc, estaño, plomo; segundo productor de cobre y molibdeno; segundo por su área de bosques naturales; uno de los principales exportadores textiles y tercer país en extensión en Sudamérica. 
-El Perú es considerado un país megadiverso dado que reúne 84 de las 104 “zonas de vida” posibles en el orbe. Está entre los 10 mejores destinos turísticos.  
-
-El área peruana de bosques naturales, que incluye árboles de maderas finas como cedro y caoba, se estima en poco menos de 80 millones de hectáreas. 
-
-Perú es uno de los países que ha aportado más especies a la alimentación mundial, con productos ahora “globalizados” como la papa, el tomate, el camote, el maíz, el maní, la quinua, el achiote y muchos otros. El Perú tiene cerca de 4 400 especies de plantas nativas de usos conocidos, destacando las de propiedades alimenticias, medicinales, ornamentales, colorantes, gastronómicas, aromáticas y cosméticas.  Y aún hay cuantiosos recursos biológicos y genéticos por investigar y aprovechar.  
-
-Asimismo, resalta por su  gastronomía, considerada entre las mejores del mundo, basada en la calidad y diversidad de sus ingredientes y su licor nacional, el Pisco, sumando ambos numerosos premios y reconocimientos internacionales.<br /> 
-<strong>Religión</strong><br /> 
-En el Perú existe libertad de culto, pero la mayoría de peruanos profesa la religión católica (81%).<br /> 
-<strong>Idiomas</strong><br /> 
-El idioma oficial es el español expresado por el  84% de la población. Sin embargo, existen 51 lenguas de 16 familias lingüísticas, la más importante es el quechua.</p>
+El Perú es una República democrática, social, independiente y soberana. Su ordenamiento jurídico se rige actualmente por la Constitución Política promulgada el 29 de diciembre de 1993.<br />
+El estado peruano tiene en su estructura tres poderes independientes: Poder Ejecutivo, Poder Legislativo (con un Parlamento Unicameral de 130 miembros) y Poder Judicial.<br />
+Las autoridades del Poder Ejecutivo y Legislativo son elegidas por sufragio popular. El actual Presidente Constitucional de la República, Ollanta Humala Tasso, asumió el cargo el 28 de julio del 2011 y dirigirá el país hasta el 28 de Julio del 2016.<br /> 
+<strong>Idiomas</strong><br />
+El idioma oficial es el español expresado por el 84% de la población. Sin embargo, existen 51 lenguas de 16 familias lingüísticas, la más importante es el quechua.<br />
+<strong>Religión</strong><br />
+En el Perú existe libertad de culto, pero la mayoría de peruanos profesa la religión católica (81%).<br />
+<strong>Historia </strong><br />
+El Perú es cuna de grandes culturas que hoy asombran al mundo. En su territorio se construyó la ciudad más antigua de América: Caral, considerada por la UNESCO como Patrimonio Cultural de la Humanidad.<br /> 
+<strong>¿Quieres conocer más? Aquí…</strong><br />
+El Perú es considerado un país megadiverso dado que reúne 84 de las 104 “zonas de vida” posibles en el orbe. Está entre los 10 mejores destinos turísticos.<br />
+Tenemos cerca de 4 400 especies de plantas nativas de usos conocidos, destacando las de propiedades alimenticias, medicinales, ornamentales, colorantes, gastronómicas, aromáticas y cosméticas. <br />
+Asimismo, resaltamos por nuestra gastronomía, considerada entre las mejores del mundo, basada en la calidad y diversidad de sus ingredientes y su licor nacional, el Pisco, sumando ambos numerosos premios y reconocimientos internacionales.<br /> 
+<strong>Economía y Desarrollo Humano </strong><br />
+En el período de julio 2011 a junio de 2012 el Perú ha logrado un crecimiento económico de 6%, superior a la trazada de 5,7%, considerando que el Producto Bruto Interno (PBI) en el 2011 se incrementó en 6.9%. Se proyecta que durante los años 2012 y 2013 el crecimiento del PBI sea del orden del 6% anual.
+</p>
     <!-- CONTENIDO -->
     </div>
   </div>
