--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ color:#ffffff;font-size: 11px;
   </div>
   <div style="height: 0px;" id="collapseOne" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     <div class="texto">La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política, cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable y la paz mundial.<br /> 
+     <div class="texto">La Oficina General de Comunicación Social (OGCS) de la Presidencia del Consejo de Ministros del Perú le da la bienvenida a nuestro país y pone a su disposición esta aplicación que facilitará su acceso a la información en torno a la III Cumbre ASPA, de la que somos anfitriones.<br />La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política, cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable y la paz mundial.<br /> 
 El ASPA está conformado conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR<br />
 <a class="btn btn-inverse enlace" href="http://www.aspa3.com" target="_blank">Ver pagina del ASPA</a>
 </div>
