--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ color:#ffffff;font-size: 11px;
   </div>
   <div style="height: 0px;" id="collapseOne" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     <div class="texto">La Oficina General de Comunicación Social (OGCS) de la Presidencia del Consejo de Ministros del Perú le da la bienvenida a nuestro país y pone a su disposición esta aplicación que facilitará su acceso a la información en torno a la III Cumbre ASPA, de la que somos anfitriones.<br />La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política, cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable y la paz mundial.<br /> 
-El ASPA está conformado conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR<br />
+     <div class="texto">La Oficina General de Comunicación Social (OGCS) de la Presidencia del Consejo de Ministros del Perú le da la bienvenida a nuestro país y pone a su disposición esta aplicación que facilitará su acceso a la información en torno a la III Cumbre ASPA, de la que somos anfitriones.<br /><br />La Cumbre América del Sur-Países Árabes (ASPA) es un foro de coordinación política, cooperación en el ámbito de la economía, la cultura, la educación, la ciencia y la tecnología, la preservación del medio ambiente, el turismo y otros temas relevantes para el desarrollo sustentable y la paz mundial.<br /> <br />
+El ASPA está conformado conformado por los 22 países miembros de la Liga de Estados Árabes y los 12 países sudamericanos miembros de UNASUR.<br /><br />
 <a class="btn btn-inverse enlace" href="http://www.aspa3.com" target="_blank">Ver pagina del ASPA</a>
 </div>
     <!-- CONTENIDO -->
@@ -397,29 +397,26 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
 <!-- INICIO QUE ES EL ASPA -->
 <div class="accordion-group">
   <div class="accordion-heading">
-    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion-info-peru" href="#info-peru1">
+    <a class="accordion-toggle" href="media/centro-milenaria.pdf">
       Centro de una civilización milenaria en América del Sur
     </a>
   </div>
   <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
-    <div class="accordion-inner"><!-- CONTENIDO -->
-     <p class="texto">
-El Perú es una República democrática, social, independiente y soberana. Su ordenamiento jurídico se rige actualmente por la Constitución Política promulgada el 29 de diciembre de 1993.<br />
-El estado peruano tiene en su estructura tres poderes independientes: Poder Ejecutivo, Poder Legislativo (con un Parlamento Unicameral de 130 miembros) y Poder Judicial.<br />
-Las autoridades del Poder Ejecutivo y Legislativo son elegidas por sufragio popular. El actual Presidente Constitucional de la República, Ollanta Humala Tasso, asumió el cargo el 28 de julio del 2011 y dirigirá el país hasta el 28 de Julio del 2016.<br /> 
-<strong>Idiomas</strong><br />
-El idioma oficial es el español expresado por el 84% de la población. Sin embargo, existen 51 lenguas de 16 familias lingüísticas, la más importante es el quechua.<br />
-<strong>Religión</strong><br />
-En el Perú existe libertad de culto, pero la mayoría de peruanos profesa la religión católica (81%).<br />
-<strong>Historia </strong><br />
-El Perú es cuna de grandes culturas que hoy asombran al mundo. En su territorio se construyó la ciudad más antigua de América: Caral, considerada por la UNESCO como Patrimonio Cultural de la Humanidad.<br /> 
-<strong>¿Quieres conocer más? Aquí…</strong><br />
-El Perú es considerado un país megadiverso dado que reúne 84 de las 104 “zonas de vida” posibles en el orbe. Está entre los 10 mejores destinos turísticos.<br />
-Tenemos cerca de 4 400 especies de plantas nativas de usos conocidos, destacando las de propiedades alimenticias, medicinales, ornamentales, colorantes, gastronómicas, aromáticas y cosméticas. <br />
-Asimismo, resaltamos por nuestra gastronomía, considerada entre las mejores del mundo, basada en la calidad y diversidad de sus ingredientes y su licor nacional, el Pisco, sumando ambos numerosos premios y reconocimientos internacionales.<br /> 
-<strong>Economía y Desarrollo Humano </strong><br />
-En el período de julio 2011 a junio de 2012 el Perú ha logrado un crecimiento económico de 6%, superior a la trazada de 5,7%, considerando que el Producto Bruto Interno (PBI) en el 2011 se incrementó en 6.9%. Se proyecta que durante los años 2012 y 2013 el crecimiento del PBI sea del orden del 6% anual.
-</p>
+    <div class="accordion-inner"><!-- CONTENIDO -->    
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="media/porque-invertir-peru.pdf">
+      ¿Por que invertir en el Perú?
+    </a>
+  </div>
+  <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->    
     <!-- CONTENIDO -->
     </div>
   </div>
@@ -483,6 +480,36 @@ En el período de julio 2011 a junio de 2012 el Perú ha logrado un crecimiento 
   </div>
 </div>
 <!-- FIN UBICACION -->
+<!-- INICIO  PRENSA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle"  data-toggle="collapse" data-parent="#accordion2" href="#prensa">
+       Prensa
+    </a>
+  </div>
+  <div style="height: 0px;" id="prensa" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+<div class="accordion" id="accordion-info-peru">
+<!-- INICIO QUE ES EL ASPA -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" href="media/centro-de-prensa.pdf">
+      Centro de Prensa
+    </a>
+  </div>
+  <div style="height: 0px;" id="centro-prensa" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->    
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN QUE ES EL ASPA -->
+</div>
+    <!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN  PRENSA -->
 <!-- INICIO NOTICIAS ASPA -->
 <div class="accordion-group">
   <div class="accordion-heading">
