--- a/english.html
+++ b/english.html
@@ -111,32 +111,31 @@ ASPA is composed of 34 countries – 12 South American and 22 Arab -, with the c
 	</tr> 
 	<tr>
 		<td>8:50 h.</td>
-		<td><strong class="titular">Saludo del Ministro de Relaciones Exteriores del Perú a los Ministros
-        de Relaciones Exteriores ASPA.</strong><br /><br />
+		<td><strong class="titular">Greeting from the Peruvian Minister of Foreign Affairs to ASPA Ministers of Foreign Affairs.</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>9:40 h. a 12:30 h.</td>
-		<td><strong class="titular">Inauguración y Primera Sesión de la Reunión del Consejo de Ministros de Relaciones Exteriores ASPA.</strong><br /><br />
+		<td><strong class="titular">Opening and First Session of the Third Meeting of the ASPA Council of Ministers of Foreign Affairs.</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>12:30 h.</td>
-		<td><strong class="titular">Foto de grupo.</strong><br /><br />
+		<td><strong class="titular">Group photo</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>15:30 h. a 18:30 h.</td>
-		<td><strong class="titular">Segunda Sesión de la Reunión del Consejo de Ministros de Relaciones Exteriores ASPA.</strong><br /><br />
+		<td><strong class="titular">Second Session of the Third Meeting of the ASPA Council of Ministers of Foreign Affairs.</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>19:00 h. a 20:00 h.</td>
-		<td><strong class="titular">Actividad cultural en el Gran Teatro Nacional.</strong><br /><br />
+		<td><strong class="titular">Cultural activity in the Grand National Theater.</strong><br /><br />
 		</td>
 	</tr>
 </tbody></table></div></div></div>
@@ -144,7 +143,7 @@ ASPA is composed of 34 countries – 12 South American and 22 Arab -, with the c
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programa-presidencia" href="#programa-presidencia3">
-      02 de Octubre
+      October 2nd
     </a>
   </div>
   <div style="height: 0px;" id="programa-presidencia3" class="accordion-body collapse">
@@ -152,44 +151,44 @@ ASPA is composed of 34 countries – 12 South American and 22 Arab -, with the c
 	<table class="table table-hover table-bordered table-striped">
 	<tbody class="texto"> 
 	<tr> 
-		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
-		<th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+		<th style="background-color:#ffffff;font-size:12px;">Schedule</th>
+		<th style="background-color:#ffffff;font-size:12px;">Activity</th>
 	</tr>
 	<tr>
 		<td>8:00 h.</td>
-		<td><strong class="titular">Saludo del señor Presidente de la República del Perú a los Jefes de Estado y de Gobierno ASPA.</strong><br /><br />
-		Lugar: Gran Teatro Nacional
+		<td><strong class="titular">Greeting from the President of the Republic of Peru to the ASPA Heads of State and Government.</strong><br /><br />
+		Venue: Grand National Theater
 		</td>
 	</tr>
 	<tr>
 		<td>8:45 h.</td>
-		<td><strong class="titular">Inauguración de la III Cumbre América del Sur – Países Árabes (ASPA)</strong><br /><br />
-		Lugar: Gran Teatro Nacional
+		<td><strong class="titular">Opening of the Third Summit of South American-Arab  Countries (ASPA).</strong><br /><br />
+		Venue: Grand National Theater
 		</td>
 	</tr>
 	<tr>
 		<td>10:00 h. a 13:00 h.</td>
-		<td><strong class="titular">Primera Sesión Plenaria de Jefes de Estado y de Gobierno ASPA</strong><br /><br />
+		<td><strong class="titular">First Plenary Session of ASPA Heads of State and Government.</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>13:00 h.</td>
-		<td><strong class="titular">Foto de grupo</strong><br /><br />
+		<td><strong class="titular">Group photo</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>15:00 hrs.</td>
-		<td><strong class="titular">Segunda Sesión Plenaria y Clausura de la III Cumbre América del Sur – Países Árabes (ASPA)</strong><br /><br />
+		<td><strong class="titular">Second Plenary Session and Closing of the Third Summit of South American and Arab Countries (ASPA)</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
 	</tr>
 	<tr>
 		<td>17:00 h</td>
-		<td><strong class="titular">Adopción de la Declaración de Lima<br />
-		Presentación del Informe del Representante del CEO Summit<br  />
-		Discurso del señor Presidente de la República del Perú. <br />
+		<td><strong class="titular">Adoption of Lima Declaration<br />
+		Presentation of the Report by the Representative of the CEO Summit<br  />
+		Speech by the President of the Republic of Peru. <br />
 		Conferencia de prensa</strong><br /><br />
 		Venue: Ministry of Culture
 		</td>
@@ -219,7 +218,7 @@ ASPA is composed of 34 countries – 12 South American and 22 Arab -, with the c
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programas" href="#programa1">
-      01 de Octubre
+      October 1st
     </a>
   </div>
   <div style="height: 0px;" id="programa1" class="accordion-body collapse">
@@ -227,24 +226,25 @@ ASPA is composed of 34 countries – 12 South American and 22 Arab -, with the c
 	<table class="table table-hover table-bordered table-striped">
 	<tbody class="texto"> 
 	<tr> 
-		<th style="background-color:#ffffff;font-size:12px;">Horario</th>
-		<th style="background-color:#ffffff;font-size:12px;">Actividad</th>
+		<th style="background-color:#ffffff;font-size:12px;">Schedule</th>
+		<th style="background-color:#ffffff;font-size:12px;">Activity</th>
 	</tr>
 	<tr>
 		<td>9:00 – 9:45 a.m.</td>
-		<td><strong class="titular">Apertura del Evento</strong><br /><br />Su Excelencia, Ollanta Humala Tasso, Presidente de la República del Perú (7 a 10 minutos)
-<br />Dr. Mohamed At-Twaijri, Secretario General Asistente para Asuntos Económicos de la Liga de Estados Árabes </td>
+		<td><strong class="titular">Opening Remarks:</strong><br /><br />H.E. Ollanta Humala Tasso, President of the Republic of Peru
+<br />Dr. Mohamed At-Twaijri, Secretary General for Economic Affairs of the League of Arab States</td>
 	</tr>
 	<tr>
 		<td>9:45 – 11:00 a.m.</td>
-		<td style="text-align: justify;"><strong class="titular">TENDIENDO PUENTES: ¿Cómo la infraestructura puede impulsar el crecimiento económico y la competitividad? ¿Mejorar la conectividad es la mejor manera de acortar las brechas?</strong><br />
-Orador principal: General Michel Sleiman, Presidente de la República de Líbano<br /> 
-<strong>Moderador: </strong><br />
+		<td style="text-align: justify;"><strong class="titular">BUILDING BRIDGES: How can infrastructure boost
+economic growth and competitiveness? Is improving connectivity the best way to shorten distances?</strong><br />
+Keynote address by: General Michel Sleiman, President of the Republic of Lebanon <br /> 
+<strong>Moderator: </strong><br />
 <strong>Panel: </strong>
 		<ul>
-			<li>Sr. Abdelkader Amara, Ministro de Industria, Comercio y Nuevas Tecnologías (Marruecos)</li>
-			<li>H.E. Sultan Ahmed Bin Sulayem, Presidente de DP World (EAU)</li>
-			<li>Sr. Sergio Cavagnaro Santa María, Gerente General de la Cámara Chilena de la Construcción (Chile) *</li>
+			<li>Abdelkader Amara, Minister of Industry, Trade and New Technologies (Morocco)</li>
+			<li>Sultan Ahmed Bin Sulayem, Chairman,  DP World (UAE)</li>
+			<li>Sergio Cavagnaro Santa María, General Manager, Chilean Chamber of Construction (Chile) *</li>
 		</ul>
 		</td>
 	</tr>
@@ -256,7 +256,7 @@ Orador principal: General Michel Sleiman, Presidente de la República de Líbano
 		<td>11:30 – 12:45 p.m.</td>
 		<td style="text-align: justify;"><strong class="titular">SEGURIDAD ALIMENTARIA: ¿Cuales son los riesgos actuales para ambas regiones? ¿Puede Sudamérica convertirse en un abastecedor clave de alimentos? ¿Cuáles son las oportunidades de inversión? ¿Cuáles son los principales problemas en el comercio de alimentos entre Medio Oriente y  América Latina? ¿Cuál es el rol de la tecnología? ¿Qué efecto tiene la crisis financiera en la seguridad alimentaria?</strong><br />
 <strong>Oradora principal:</strong>Sra. Dilma Rousseff, Presidenta de la República Federativa del Brasil *<br />
-<strong>Moderador:</strong><br />
+<strong>Moderator:</strong><br />
 <strong>Panel: </strong><br />
 		<ul>
 			<li>Nasser Mohamed Al-Hajri, Presidente de Hassad Food Company (Qatar)</li>
@@ -273,7 +273,7 @@ Orador principal: General Michel Sleiman, Presidente de la República de Líbano
 		<td>2:30 – 3:45 p.m.</td>
 		<td style="text-align: justify;"><strong class="titular">EL FUTURO DE LA ENERGÍA: ¿Será el acceso a la energía una traba para el crecimiento económico global? ¿Cómo se puede maximizar el uso de fuentes energéticas no renovables, protegiendo el ambiente y desarrollando nuevas tecnologías? </strong><br />
 <strong>Orador principal:</strong> Sr. Juan Manuel Santos, Presidente de Colombia *<br /> 
-<strong>Moderador:</strong><br />
+<strong>Moderator:</strong><br />
 <strong>Panel: </strong><br />
 		<ul>
 			<li>Sr. Enrique M. Pescarmona, Presidente y CEO de IMPSA (Argentina)</li>
@@ -290,7 +290,7 @@ Orador principal: General Michel Sleiman, Presidente de la República de Líbano
 		<td>4:15 – 5:30 p.m.</td>
 		<td style="text-align: justify;"><strong class="titular">MÁS ALLÁ DE LOS RECURSOS NATURALES: ¿Es la disponibilidad de recursos naturales una limitación en el desarrollo de la innovación? ¿Cómo se pueden usar los recursos naturales para crear valor agregado? ¿Cómo cuidar el escaso recurso del agua? ¿Cómo afrontar el problema del cambio climático? </strong><br />
 <strong>Orador principal:</strong> Sheikh Hamad Bin Khalifa Al-Thani, Emir del Estado de Qatar <br />
-<strong>Moderador:</strong><br />
+<strong>Moderator:</strong><br />
 <strong>Panel: </strong><br />
 		<ul>
 			<li>Issad Rebrab, CEO, CEVITAL (Argelia)</li>
@@ -319,7 +319,7 @@ Orador principal: General Michel Sleiman, Presidente de la República de Líbano
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle"  data-toggle="collapse" data-parent="#programas" href="#programa2">
-      02 de Octubre
+      October 2nd
     </a>
   </div>
   <div style="height: 0px;" id="programa2" class="accordion-body collapse">
@@ -426,7 +426,7 @@ Jorge Merino Tafur, Ministro de Energía y Minas del Perú
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle" href="http://hiddentreasures.peru.travel/" target="_blank">
-      Explorer Perú
+      Peru: Empire of hidden treasures
     </a>
   </div>
   <div style="height: 0px;" id="info-peru3" class="accordion-body collapse">
