--- a/english.html
+++ b/english.html
@@ -250,35 +250,37 @@ Keynote address by: General Michel Sleiman, President of the Republic of Lebanon
 	</tr>
 	<tr>
 		<td>11:00 – 11:30 a.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Receso de café y Networking</strong></td>
+		<td style="text-align: justify;"><strong class="titular">Networking Break</strong></td>
 	</tr>
 	<tr>
 		<td>11:30 – 12:45 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">SEGURIDAD ALIMENTARIA: ¿Cuales son los riesgos actuales para ambas regiones? ¿Puede Sudamérica convertirse en un abastecedor clave de alimentos? ¿Cuáles son las oportunidades de inversión? ¿Cuáles son los principales problemas en el comercio de alimentos entre Medio Oriente y  América Latina? ¿Cuál es el rol de la tecnología? ¿Qué efecto tiene la crisis financiera en la seguridad alimentaria?</strong><br />
-<strong>Oradora principal:</strong>Sra. Dilma Rousseff, Presidenta de la República Federativa del Brasil *<br />
+		<td style="text-align: justify;"><strong class="titular">FOOD SECURITY: What are the current risks for both
+regions? Can South America play a key role as a global food supplier? What are the investment opportunities? What are the key issues in the food trade between Middle East and Latin America? What is the role of technology? What effect did the financial crisis have on food security?</strong><br />
+<strong>Oradora principal:</strong>Keynote address by: H.E. Dilma Rousseff, President of Brazil *<br />
 <strong>Moderator:</strong><br />
 <strong>Panel: </strong><br />
 		<ul>
-			<li>Nasser Mohamed Al-Hajri, Presidente de Hassad Food Company (Qatar)</li>
-			<li>Rafael Mejía López, Presidente de la Sociedad de Agricultores de Colombia (Colombia) </li>
-			<li>José Luis Silva Martinot, Ministro de Comercio Exterior y Turismo (Perú) *</li>
+			<li>Nasser Mohamed Al-Hajri, Chairman of Hassad Food Company (Qatar)</li>
+			<li>Rafael Mejía López, President of Colombian Society of Farmers (Colombia)</li>
+			<li>José Luis Silva Martinot, Minister of Foreign Trade and Tourism (Peru) *</li>
 		</ul>
 		</td>
 	</tr>
 	<tr>
 		<td>12:45 – 2:30 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">Almuerzo en el Swissôtel</strong></td>
+		<td style="text-align: justify;"><strong class="titular">Lunch</strong></td>
 	</tr>
 	<tr>
 		<td>2:30 – 3:45 p.m.</td>
-		<td style="text-align: justify;"><strong class="titular">EL FUTURO DE LA ENERGÍA: ¿Será el acceso a la energía una traba para el crecimiento económico global? ¿Cómo se puede maximizar el uso de fuentes energéticas no renovables, protegiendo el ambiente y desarrollando nuevas tecnologías? </strong><br />
-<strong>Orador principal:</strong> Sr. Juan Manuel Santos, Presidente de Colombia *<br /> 
+		<td style="text-align: justify;"><strong class="titular">THE FUTURE OF ENERGY: Will energy be a bottleneck
+for global economic growth? How can we maximize the use of non-renewable energy sources while protecting the environment and developing new technologies?</strong><br />
+<strong>Orador principal:</strong>Keynote address by: H.E. Juan Manuel Santos, President of Colombia *<br /> 
 <strong>Moderator:</strong><br />
 <strong>Panel: </strong><br />
 		<ul>
-			<li>Sr. Enrique M. Pescarmona, Presidente y CEO de IMPSA (Argentina)</li>
-			<li>Sra. Maria das Graças Silva Foster,Presidenta de Petrobras (Brasil) *</li>
-			<li>Mauro R. Hoyer, Director del Departamento de Información del Fondo de la OPEP para el Desarrollo Internacional (Arabia Saudita)</li>
+			<li>Enrique Pescarmona, President and CEO of IMPSA (Argentina)</li>
+			<li>Maria das Graças Silva Foster, President of Petrobras (Brazil) *</li>
+			<li>Mauro R. Hoyer, Director of the Department of Information of The OPEC Fund for International Development (Saudi Arabia)</li>
 		</ul> 
 		</td>
 	</tr>
